--- a/ms/invasibility-ms.bib
+++ b/ms/invasibility-ms.bib
@@ -514,6 +514,23 @@
   number = {6}
 }
 
+@article{colauttiPropagulePressureNull2006,
+  title = {Propagule {{Pressure}}: {{A Null Model}} for {{Biological Invasions}}},
+  shorttitle = {Propagule {{Pressure}}},
+  author = {Colautti, Robert I. and Grigorovich, Igor A. and MacIsaac, Hugh J.},
+  year = {2006},
+  month = jul,
+  volume = {8},
+  pages = {1023--1037},
+  issn = {1573-1464},
+  doi = {10.1007/s10530-005-3735-y},
+  abstract = {Invasion ecology has been criticised for its lack of general principles. To explore this criticism, we conducted a meta-analysis that examined characteristics of invasiveness (i.e. the ability of species to establish in, spread to, or become abundant in novel communities) and invasibility (i.e. the susceptibility of habitats to the establishment or proliferation of invaders). There were few consistencies among invasiveness characteristics (3 of 13): established and abundant invaders generally occupy similar habitats as native species, while abundant species tend to be less affected by enemies; germination success and reproductive output were significantly positively associated with invasiveness when results from both stages (establishment/spread and abundance/impact) were combined. Two of six invasibility characteristics were also significant: communities experiencing more disturbance and with higher resource availability sustained greater establishment and proliferation of invaders. We also found that even though `propagule pressure' was considered in only \textasciitilde 29\% of studies, it was a significant predictor of both invasiveness and invasibility (55 of 64 total cases). Given that nonindigenous species are likely introduced non-randomly, we contend that `propagule biases' may confound current paradigms in invasion ecology. Examples of patterns that could be confounded by propagule biases include characteristics of good invaders and susceptible habitats, release from enemies, evolution of `invasiveness', and invasional meltdown. We conclude that propagule pressure should serve as the basis of a null model for studies of biological invasions when inferring process from patterns of invasion.},
+  file = {/home/julien/Documents/ZoteroLibrary/Colautti et al_2006_Propagule Pressure.pdf},
+  journal = {Biological Invasions},
+  language = {en},
+  number = {5}
+}
+
 @article{cousensWhyWeNot2018,
   title = {Why We Do Not Expect Dispersal Probability Density Functions Based on a Single Mechanism to Fit Real Seed Shadows},
   author = {Cousens, Roger D. and Hughes, Barry D. and Mesgaran, Mohsen B.},
@@ -886,6 +903,21 @@
   keywords = {overdispersion,statistics,zero inflation},
   language = {en},
   number = {2}
+}
+
+@article{johnstonePlantInvasionWindows1986,
+  title = {Plant {{Invasion Windows}}: {{A Time}}-{{Based Classification}} of {{Invasion Potential}}},
+  shorttitle = {Plant {{Invasion Windows}}},
+  author = {Johnstone, I. M.},
+  year = {1986},
+  volume = {61},
+  pages = {369--394},
+  issn = {1469-185X},
+  doi = {10.1111/j.1469-185X.1986.tb00659.x},
+  annotation = {\_eprint: https://onlinelibrary.wiley.com/doi/pdf/10.1111/j.1469-185X.1986.tb00659.x},
+  journal = {Biological Reviews},
+  language = {en},
+  number = {4}
 }
 
 @article{jongejansUnifyingGravityFramework2014,
