--- a/ms/invasibility-ms.tex
+++ b/ms/invasibility-ms.tex
@@ -37,7 +37,7 @@
 \IfFileExists{bookmark.sty}{\usepackage{bookmark}}{\usepackage{hyperref}}
 \hypersetup{
   pdftitle={Accounting for seed rain and other confounders reveals which ecosystems are most susceptible to alien conifer establishment},
-  pdfauthor={Julien Vollering1,2*; Siri Lie Olsen; Olav Skarpaas; Leif Appelgren; Magni Olsen Kyrkjeeide3; Anders Often; Jakob Sandven; Odd Stabbetorp; Øyvind Sørhuus4},
+  pdfauthor={Julien Vollering1,2*; Siri Lie Olsen3,4; Olav Skarpaas2; Leif Appelgren; Magni Olsen Kyrkjeeide5; Anders Often; Jakob Sandven; Odd Stabbetorp; Øyvind Sørhuus6},
   hidelinks,
   pdfcreator={LaTeX via pandoc}}
 \urlstyle{same} % disable monospaced font for URLs
@@ -86,7 +86,7 @@
 \usepackage{xcolor}
 
 \title{Accounting for seed rain and other confounders reveals which ecosystems are most susceptible to alien conifer establishment}
-\author{Julien Vollering\textsuperscript{1,2}* \and Siri Lie Olsen \and Olav Skarpaas \and Leif Appelgren \and Magni Olsen Kyrkjeeide\textsuperscript{3} \and Anders Often \and Jakob Sandven \and Odd Stabbetorp \and Øyvind Sørhuus\textsuperscript{4}}
+\author{Julien Vollering\textsuperscript{1,2}* \and Siri Lie Olsen\textsuperscript{3,4} \and Olav Skarpaas\textsuperscript{2} \and Leif Appelgren \and Magni Olsen Kyrkjeeide\textsuperscript{5} \and Anders Often \and Jakob Sandven \and Odd Stabbetorp \and Øyvind Sørhuus\textsuperscript{6}}
 \date{}
 
 \begin{document}
@@ -96,9 +96,13 @@
 
 \textsuperscript{2}Department of Research and Collections, Natural History Museum, University of Oslo, Oslo, Norway
 
-\textsuperscript{3}Norwegian Institute for Nature Research, Trondheim, Norway
+\textsuperscript{3}Norwegian Institute for Nature Research, Oslo, Norway
 
-\textsuperscript{4}NORSKOG, Oslo, Norway
+\textsuperscript{4}Institute of Urbanism and Landscape, The Oslo School of Architecture and Design, Oslo, Norway
+
+\textsuperscript{5}Norwegian Institute for Nature Research, Trondheim, Norway
+
+\textsuperscript{6}NORSKOG, Oslo, Norway
 
 *Corresponding author: \href{mailto:julienvollering@gmail.com}{\nolinkurl{julienvollering@gmail.com}}
 
