--- a/ms/invasibility-ms.tex
+++ b/ms/invasibility-ms.tex
@@ -214,7 +214,7 @@ Specifically, we selected from Bullock et al.~(\protect\hyperlink{ref-bullockSyn
 Seventy-two of the 82 stands in our data set matched this height range better than a taller range with a different empirical kernel.
 
 The second model was an anisotropic implementation of the Wald Analytical Long-distance Dispersal model (WALD, Katul et al., \protect\hyperlink{ref-katulMechanisticAnalyticalModels2005}{2005}), following Skarpaas \& Shea (\protect\hyperlink{ref-skarpaasDispersalPatternsDispersal2007}{2007}).
-We parameterized the model with: site- and season-specific wind vectors retrieved from meteorological data sets, wind turbulence estimated from local ecosystem composition, seed release height based on stand height, and species-specific seed terminal velocities from literature.
+We parameterized the model with: site- and season-specific wind vectors retrieved from meteorological data sets (MET Norway; Reistad et al., \protect\hyperlink{ref-reistadHighresolutionHindcastWind2011}{2011}; Haakenstad \& Haugen, \protect\hyperlink{ref-haakenstad15yearHighResolution2017}{2017}), wind turbulence estimated from local ecosystem composition, seed release height based on stand height, and species-specific seed terminal velocities from literature.
 
 We transformed field-mapped polygons of potential seed sources into hexagonally gridded point sources, with a density of 0.1~m\textsuperscript{-2} for the first model and 0.01~m\textsuperscript{-2} for the second model (to reduce computation time).
 Then we applied our two dispersal models to estimate the distribution of relative seed rain from all point sources in a grid of 10~m cells.
