--- a/ms/invasibility-ms.tex
+++ b/ms/invasibility-ms.tex
@@ -37,7 +37,7 @@
 \IfFileExists{bookmark.sty}{\usepackage{bookmark}}{\usepackage{hyperref}}
 \hypersetup{
   pdftitle={Accounting for seed rain and other confounders reveals which ecosystems are most susceptible to alien conifer establishment},
-  pdfauthor={Julien Vollering1,2*; Siri Lie Olsen3,4; Olav Skarpaas2; Leif Appelgren; Magni Olsen Kyrkjeeide5; Anders Often; Jakob Sandven; Odd Stabbetorp; Øyvind Sørhuus6},
+  pdfauthor={Julien Vollering1,2*; Siri Lie Olsen3,4; Olav Skarpaas2; Leif Appelgren5; Magni Olsen Kyrkjeeide6; Anders Often3; Jakob Sandven7; Odd Stabbetorp3; Øyvind Sørhuus7},
   hidelinks,
   pdfcreator={LaTeX via pandoc}}
 \urlstyle{same} % disable monospaced font for URLs
@@ -86,7 +86,7 @@
 \usepackage{xcolor}
 
 \title{Accounting for seed rain and other confounders reveals which ecosystems are most susceptible to alien conifer establishment}
-\author{Julien Vollering\textsuperscript{1,2}* \and Siri Lie Olsen\textsuperscript{3,4} \and Olav Skarpaas\textsuperscript{2} \and Leif Appelgren \and Magni Olsen Kyrkjeeide\textsuperscript{5} \and Anders Often \and Jakob Sandven \and Odd Stabbetorp \and Øyvind Sørhuus\textsuperscript{6}}
+\author{Julien Vollering\textsuperscript{1,2}* \and Siri Lie Olsen\textsuperscript{3,4} \and Olav Skarpaas\textsuperscript{2} \and Leif Appelgren\textsuperscript{5} \and Magni Olsen Kyrkjeeide\textsuperscript{6} \and Anders Often\textsuperscript{3} \and Jakob Sandven\textsuperscript{7} \and Odd Stabbetorp\textsuperscript{3} \and Øyvind Sørhuus\textsuperscript{7}}
 \date{}
 
 \begin{document}
@@ -100,9 +100,11 @@
 
 \textsuperscript{4}Institute of Urbanism and Landscape, The Oslo School of Architecture and Design, Oslo, Norway
 
-\textsuperscript{5}Norwegian Institute for Nature Research, Trondheim, Norway
+\textsuperscript{5} Ecofact AS, Sandnes, Norway
 
-\textsuperscript{6}NORSKOG, Oslo, Norway
+\textsuperscript{6}Norwegian Institute for Nature Research, Trondheim, Norway
+
+\textsuperscript{7}NORSKOG, Oslo, Norway
 
 *Corresponding author: \href{mailto:julienvollering@gmail.com}{\nolinkurl{julienvollering@gmail.com}}
 
